[gd_scene load_steps=14 format=3 uid="uid://c7gyn13lql2m8"]

[ext_resource type="Script" path="res://scenes/Environment/game_field.gd" id="1_kav24"]
[ext_resource type="Texture2D" uid="uid://djiliwe7gmlcb" path="res://assets/Textures/PlayField/PlayFieldTex.png" id="1_qw7fs"]
[ext_resource type="Texture2D" uid="uid://dt4t6l1gnn6bj" path="res://assets/Textures/blank pixels.png" id="3_4ek75"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r56b0"]
size = Vector2(500, 720)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_17bx5"]
size = Vector2(1500, 525)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjui1"]
size = Vector2(530, 2.45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1ls0h"]
size = Vector2(188, 12)

[sub_resource type="RichTextEffect" id="RichTextEffect_yy0li"]

[sub_resource type="LabelSettings" id="LabelSettings_w3lg1"]
font_size = 50
font_color = Color(1, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_babci"]
font_size = 50
font_color = Color(0, 0, 1, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_1h3a5"]
font_size = 50
font_color = Color(0, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_8p8br"]
font_size = 50
font_color = Color(0, 0, 0, 1)
outline_size = 5

[sub_resource type="LabelSettings" id="LabelSettings_fr6ko"]
font_size = 35
font_color = Color(0, 0, 0, 1)
outline_size = 5

[node name="GameField" type="Node2D" node_paths=PackedStringArray("goalSouth", "goalNorth", "p1_score_label", "p2_score_label", "timer_label", "status_label", "game_timer", "countdown_timer", "center_point")]
script = ExtResource("1_kav24")
goalSouth = NodePath("FieldCenter/GoalSouth")
goalNorth = NodePath("FieldCenter/GoalNorth")
p1_score_label = NodePath("FieldCenter/GameGUIBOX/Score_HBOX/P1_Label")
p2_score_label = NodePath("FieldCenter/GameGUIBOX/Score_HBOX/P2_Label")
timer_label = NodePath("FieldCenter/GameGUIBOX/Timer_HBOX/Timer_Label")
status_label = NodePath("FieldCenter/GameGUIBOX/HBoxContainer/Won Label")
game_timer = NodePath("Game_Timer")
countdown_timer = NodePath("Countdown_Timer")
center_point = NodePath("FieldCenter")

[node name="FieldCenter" type="Node2D" parent="."]
position = Vector2(640, 360)

[node name="PlayFieldTex" type="Sprite2D" parent="FieldCenter"]
scale = Vector2(0.667, 0.667)
texture = ExtResource("1_qw7fs")

[node name="BorderCollider" type="StaticBody2D" parent="FieldCenter"]

[node name="RightWallCollider" type="CollisionShape2D" parent="FieldCenter/BorderCollider"]
position = Vector2(510, 0)
shape = SubResource("RectangleShape2D_r56b0")

[node name="LeftWallCollider" type="CollisionShape2D" parent="FieldCenter/BorderCollider"]
position = Vector2(-510, 0)
shape = SubResource("RectangleShape2D_r56b0")

[node name="TopWallCollider" type="CollisionShape2D" parent="FieldCenter/BorderCollider"]
position = Vector2(0, -615.5)
shape = SubResource("RectangleShape2D_17bx5")

[node name="BottomWallCollider" type="CollisionShape2D" parent="FieldCenter/BorderCollider"]
position = Vector2(0, 616)
shape = SubResource("RectangleShape2D_17bx5")

[node name="CenterLineCollider" type="StaticBody2D" parent="FieldCenter"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldCenter/CenterLineCollider"]
shape = SubResource("RectangleShape2D_sjui1")

[node name="GoalSouth" type="Area2D" parent="FieldCenter"]
position = Vector2(0, 350)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldCenter/GoalSouth"]
shape = SubResource("RectangleShape2D_1ls0h")

[node name="Sprite2D" type="Sprite2D" parent="FieldCenter/GoalSouth"]
modulate = Color(1, 0, 0, 1)
scale = Vector2(18.8, 1.16)
texture = ExtResource("3_4ek75")

[node name="GoalNorth" type="Area2D" parent="FieldCenter"]
position = Vector2(0, -350)

[node name="CollisionShape2D" type="CollisionShape2D" parent="FieldCenter/GoalNorth"]
shape = SubResource("RectangleShape2D_1ls0h")

[node name="Sprite2D" type="Sprite2D" parent="FieldCenter/GoalNorth"]
modulate = Color(0, 0, 1, 1)
scale = Vector2(18.8, 1.16)
texture = ExtResource("3_4ek75")

[node name="RichTextLabel" type="RichTextLabel" parent="FieldCenter"]
visible = false
offset_left = 268.0
offset_top = -327.0
offset_right = 609.0
offset_bottom = -218.0
theme_override_font_sizes/normal_font_size = 44
bbcode_enabled = true
text = "[color=red]P1 00[/color] - [color=blue]P2 00[/color]"
custom_effects = [SubResource("RichTextEffect_yy0li")]

[node name="P1_Label" type="Label" parent="FieldCenter"]
offset_left = -322.0
offset_top = 291.0
offset_right = -191.0
offset_bottom = 360.0
text = "P1"
label_settings = SubResource("LabelSettings_w3lg1")

[node name="P2_Label" type="Label" parent="FieldCenter"]
offset_left = -328.0
offset_top = -360.0
offset_right = -197.0
offset_bottom = -291.0
text = "P2"
label_settings = SubResource("LabelSettings_babci")

[node name="GameGUIBOX" type="VBoxContainer" parent="FieldCenter"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 278.0
offset_top = -327.0
offset_right = 590.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer_HBOX" type="HBoxContainer" parent="FieldCenter/GameGUIBOX"]
layout_mode = 2

[node name="Timer_Label" type="Label" parent="FieldCenter/GameGUIBOX/Timer_HBOX"]
layout_mode = 2
text = "05:00.000"
label_settings = SubResource("LabelSettings_1h3a5")

[node name="Score_HBOX" type="HBoxContainer" parent="FieldCenter/GameGUIBOX"]
layout_mode = 2

[node name="P1_Label" type="Label" parent="FieldCenter/GameGUIBOX/Score_HBOX"]
layout_mode = 2
text = "P1 00"
label_settings = SubResource("LabelSettings_w3lg1")

[node name="Spacer_Label" type="Label" parent="FieldCenter/GameGUIBOX/Score_HBOX"]
layout_mode = 2
text = " - "
label_settings = SubResource("LabelSettings_8p8br")

[node name="P2_Label" type="Label" parent="FieldCenter/GameGUIBOX/Score_HBOX"]
layout_mode = 2
text = "00 P2"
label_settings = SubResource("LabelSettings_babci")

[node name="HBoxContainer" type="HBoxContainer" parent="FieldCenter/GameGUIBOX"]
layout_mode = 2

[node name="Won Label" type="Label" parent="FieldCenter/GameGUIBOX/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_fr6ko")

[node name="Game_Timer" type="Timer" parent="."]
wait_time = 300.0

[node name="Countdown_Timer" type="Timer" parent="."]

[connection signal="body_entered" from="FieldCenter/GoalSouth" to="." method="_on_goal_south_body_entered"]
[connection signal="body_entered" from="FieldCenter/GoalNorth" to="." method="_on_goal_north_body_entered"]
[connection signal="timeout" from="Game_Timer" to="." method="_on_game_timeout"]
[connection signal="timeout" from="Countdown_Timer" to="." method="_on_countdown_timer_timeout"]
